travis.yml file update

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,14 @@ before_install:
 script:
   - docker run -e CI=true daniel/react-dev npm run test
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: react-app
+  environment: "Reactapp-env"
+  bucket_name: "elasticbeanstalk-us-east-1-814971353988"
+  bucket_path: "react-app"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
+  on:
+    branch: main
