--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ deploy:
   bucket_path: "react-app"
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: "$AWS_SECRET_KEY"
+  edge: true
   on:
     branch: main
